egonlang-core/res/examples/valid/typeref_nested.eg
let a: list<list<number>> = [[1]];