egonlang-core/res/examples/invalid/range_empty_inclusive_no_end.eg
..=;

// out: SyntaxError: unexpected ";"; expected: ["number"]